--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,13 @@
 
 body {
   margin: 0;
-
+  background-color: rgba(255, 166, 0, 0.5);
+  /* background-image: linear-gradient(
+    62deg,
+    #fbab7e 0%,
+    #f7ce68 50%,
+    #ffffff 100%
+  ); */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
