--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,6 @@
 body {
   margin: 0;
   background-color: rgba(255, 166, 0, 0.5);
-  /* background-image: linear-gradient(
-    62deg,
-    #fbab7e 0%,
-    #f7ce68 50%,
-    #ffffff 100%
-  ); */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -19,4 +13,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.scroll-to-top {
+  background-color: orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.5;
+  border: 1px solid black;
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+.scroll-to-top:hover {
+  transform: scale(1.1);
+  opacity: 1;
 }
